src/objects/CHN_Qualified_Data__c.object
<CustomObject>
    <fields>
        <fullName>Advisor_MSID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisor MSID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big5_Key__c</fullName>
        <formula>First_Name__c + Last_Name__c + TEXT( Date_of_Birth__c ) + Policy_Number__c  + Subscriber_Member_ID__c</formula>
        <label>Big5 Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHN_Qualified__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CHN Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Referral_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>EFS Referral Identifier</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Complex_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complex Indicator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralIndentifierHidden__c</fullName>
        <formula>CHN_Referral_Identifier__c +&apos;:&apos;+ Policy_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReferralIndentifierHidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Modified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Service_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Service Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Service_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Service Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Source_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referred Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber/Member ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueTEST__c</fullName>
        <formula>TEXT( Date_of_Birth__c ) + Policy_Number__c + Subscriber_Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueTEST</label>
        <type>Text</type>
    </fields>
    <label>EFS Qualified Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CHN_Qualified__c</columns>
        <columns>CHN_Referral_Identifier__c</columns>
        <columns>EID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Complex_Indicator__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Subscriber_Member_ID__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Policy_Number__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Score_Description__c</columns>
        <columns>Source_Description__c</columns>
        <columns>Source_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CHN_All_Data_columns</fullName>
        <columns>NAME</columns>
        <columns>CHN_Referral_Identifier__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Policy_Number__c</columns>
        <columns>Subscriber_Member_ID__c</columns>
        <columns>EID__c</columns>
        <columns>Date_of_Birth__c</columns>
        <filterScope>Everything</filterScope>
        <label>EFS All Data columns</label>
    </listViews>
    <listViews>
        <fullName>Complex_Indicator</fullName>
        <columns>NAME</columns>
        <columns>Complex_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Referral_Service_Type__c</field>
            <operation>notEqual</operation>
            <value>FAMILY</value>
        </filters>
        <label>Complex Indicator</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_Modified_Date_Today</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Complex_Indicator__c</columns>
        <columns>Subscriber_Member_ID__c</columns>
        <columns>CHN_Referral_Identifier__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Individual_Identifier__c</columns>
        <columns>CHN_Qualified__c</columns>
        <columns>Policy_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Last Modified Date Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EFSQ-{00000}</displayFormat>
        <label>EFS Qualified Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFS Qualified Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>